--- a/src/main/webapp/app/entities/movie/list/movie.component.html
+++ b/src/main/webapp/app/entities/movie/list/movie.component.html
@@ -1,4 +1,4 @@
-<div>
+<div *jhiHasAnyAuthority="'ROLE_ADMIN'">
   <h2 id="page-heading" data-cy="MovieHeading">
     <span>Movies</span>
 
@@ -171,4 +171,104 @@
       </div>
     </div>
   }
+</div>
+
+<div *jhiHasAnyAuthority="'ROLE_USER'" class="contentMain">
+  <div class="body col-lg-9">
+    @if (movies && movies.length > 0) {
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="row">
+            @for (movie of movies; track trackId(movie)) {
+              <div [routerLink]="['/movie', movie.id, 'view']" class="col-md-3 mb-4">
+                <div class="card">
+                  <img [src]="movie.avatar" alt="Yeu Vuot Thoi Khong" class="card-img-top" />
+                  <div class="overlay">{{ movie.description }}</div>
+                  <h3 class="card-title">{{ movie.movieName }}</h3>
+                </div>
+              </div>
+            }
+          </div>
+        </div>
+      </div>
+    }
+  </div>
+
+  <!-- Trending Sidebar -->
+  <div class="col-lg-3">
+    <div class="trending-section">
+      <h5 class="text-orange">TRENDING</h5>
+      <hr class="text-light" />
+
+      <!-- Tabs -->
+      <ul class="nav nav-tabs mb-3" id="trending-tabs" role="tablist">
+        <li class="nav-item" role="presentation">
+          <button
+            class="nav-link active"
+            id="day-tab"
+            data-bs-toggle="tab"
+            data-bs-target="#day"
+            type="button"
+            role="tab"
+            aria-controls="day"
+            aria-selected="true"
+          >
+            Ngày
+          </button>
+        </li>
+        <li class="nav-item" role="presentation">
+          <button
+            class="nav-link"
+            id="week-tab"
+            data-bs-toggle="tab"
+            data-bs-target="#week"
+            type="button"
+            role="tab"
+            aria-controls="week"
+            aria-selected="false"
+          >
+            Tuần
+          </button>
+        </li>
+        <li class="nav-item" role="presentation">
+          <button
+            class="nav-link"
+            id="month-tab"
+            data-bs-toggle="tab"
+            data-bs-target="#month"
+            type="button"
+            role="tab"
+            aria-controls="month"
+            aria-selected="false"
+          >
+            Tháng
+          </button>
+        </li>
+      </ul>
+
+      <!-- Tab Content -->
+      <div class="tab-content" id="trending-tab-content">
+        <div class="tab-pane fade show active" id="day" role="tabpanel" aria-labelledby="day-tab">
+          <ul class="list-unstyled">
+            @for (movie of topMovies; track $index) {
+              <li [routerLink]="['/movie', movie.id, 'view']" class="">
+                <span class="badge bg-orange me-2">{{ $index + 1 }}</span>
+                <div>
+                  <strong>{{ movie.movieName }}</strong>
+                  <p style="color: white" class="mb-0">{{ movie.view }} Lượt xem</p>
+                </div>
+              </li>
+            }
+          </ul>
+        </div>
+
+        <div class="tab-pane fade" id="week" role="tabpanel" aria-labelledby="week-tab">
+          <p class="text-muted">Nội dung đang cập nhật cho Tuần...</p>
+        </div>
+        <div class="tab-pane fade" id="month" role="tabpanel" aria-labelledby="month-tab">
+          <p class="text-muted">Nội dung đang cập nhật cho Tháng...</p>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
