--- a/src/main/webapp/app/entities/comment/detail/comment-detail.component.html
+++ b/src/main/webapp/app/entities/comment/detail/comment-detail.component.html
@@ -39,6 +39,13 @@
               </div>
             }
           </dd>
+          <dd>
+            @if (comment()!.user) {
+              <div>
+                <a [routerLink]="['/user', comment()!.user?.id, 'view']">{{ commentRef.user?.id }}</a>
+              </div>
+            }
+          </dd>
         </dl>
 
         <button type="submit" (click)="previousState()" class="btn btn-info" data-cy="entityDetailsBackButton">
